@@ -61,6 +61,7 @@ depth: 1
  * Remove unnecessary box-sizing: border-box declarations in SCSS (Albina Starykova)
  * Migrated `initTooltips` to TypeScript add JSDoc and unit tests (Fatuma Abdullahi)
  * Migrated `initTagField` from core.js to own TypeScript file and add unit tests (Chisom Okeoma)
+ * Added unit tests & JSDoc to `initDissmisibles` (Yekasumah)
 
 ## Upgrade considerations
 
